--- a/todo-app/src/index.html
+++ b/todo-app/src/index.html
@@ -5,7 +5,7 @@
   <title>Dark Shadow</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
+  <link rel="icon" type="image/x-icon" href="./assets/images/logo.png" style="border-radius: 50%;">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
